# Cellphone

./: .gitignore  manage.py  pyproject.toml
cellphoneapi/: db.sqlite3  manage.py
cellphoneapi/Apps/: admin.py  models.py
cellphoneapi/Apps/api/: CartApi.py  CartItemsApi.py  New Text Document.txt  OrderApi.py  OrderItemApi.py  OrderStatusApi.py  ProductApi.py  ProductDetailApi.py  RoleApi.py  UserApi.py  fake_data.xlsx  fake_func.py
cellphoneapi/Apps/constants/: error_code.py
cellphoneapi/Apps/migrations/: 0001_initial.py  0002_cart_product_color_product_height_product_image_url_and_more.py  0003_orderstatusschema_alter_user_managers.py  0004_alter_orderstatusschema_status_name.py  0005_alter_cart_username.py  0006_alter_cartitem_cart_alter_cartitem_pd.py  0007_remove_product_color_product_weight.py  0008_orderschema.py  0009_productdetail_orderitemschema.py  0010_product_pd_detail.py  0011_alter_productdetail_camera_behind_and_more.py  0012_role_orderschema_shipper_id_orderschema_shipping_fee_and_more.py
cellphoneapi/Apps/paths/: CartItemPath.py  CartPath.py  OrderItemPath.py  OrderPath.py  OrderStatusPath.py  ProductDetailPath.py  ProductPath.py  RolePath.py  UserPath.py
cellphoneapi/Apps/serializers/: CartItemSerializer.py  CartSerializer.py  OrderItemSerializer.py  OrderSerializer.py  User.py  (+5 more)
cellphoneapi/cellphoneapi/: asgi.py  settings.py  urls.py  wsgi.py
cellphony_api/: asgi.py  settings.py  urls.py  wsgi.py
common/: http_errors.py
healthcheck/: urls.py  views.py
middleware/http_error_handling_middleware/: http_error_handling_middleware.py
(+18 files in other folders)
